modified:   app/build.gradle 	new file:   app/libs/apache-httpcomponents-httpcore.jar 	new file:   app/libs/apache-httpcomponents-httpcore.jar.zip 	new file:   app/libs/httpclient-4.5.2.jar 	modified:   app/src/androidTest/java/com/beproject/lams/TestDb.java 	modified:   app/src/main/AndroidManifest.xml 	modified:   app/src/main/java/com/beproject/lams/EventFragment.java 	modified:   app/src/main/java/com/beproject/lams/LoginActivityFragment.java 	modified:   app/src/main/java/com/beproject/lams/MyHttpClient.java 	modified:   app/src/main/java/com/beproject/lams/data/LamsDBHelper.java 	modified:   app/src/main/java/com/beproject/lams/dummy/EventContent.java 	modified:   app/src/main/res/layout/fragment_login.xml 	modified:   app/src/main/res/values/strings.xml